--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
 <head>
 	<title>Personal web</title>
 
-
-  
-<script type="text/javascript" src=""></script>
  
-   <script src="jquery-3.1.0.js"></script> 
-  
-  
-  <link rel="stylesheet" type="text/css" href="mystyle.css">
+<script type="text/javascript" src=""></script>
+<script src="jquery-3.1.0.js"></script> 
+   
+<link rel="stylesheet" type="text/css" href="mystyle.css">
 
  	
-  
 </head>
-<body></body>
+<body>
+	<div class="left">
+		<img src="imges/me.jpg">
+	</div>
+
+	
+</body>
 </html>  
